@@ -1,0 +1,3 @@
+Based on gradient and Step themes created by:
+Copyright (C) 1999 John Harper <john@dcs.warwick.ac.uk>
+Copyright (C) 1999 Michele Campeotto <micampe@f2s.com>
