@@ -9,6 +9,10 @@
 	* themes/StyleTab/theme.jl: set title-x offsets so that
 	update-text-position works properly with StyleTab
 
+	* themes/gradient-tabbed/: added
+
+	* themes/Makefile.in: updated
+
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* themes/get-S-tabbed/
 	* themes/brushed-metal/
